# Fuel-Vanity-Address-Generator

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
